--- a/styles/Site.css
+++ b/styles/Site.css
@@ -618,10 +618,12 @@ header {
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: flex-start;
+  padding: 2rem 1rem;
 }
 @media all and (min-width: 768px) {
   header {
     display: block;
+    padding: 2rem;
     height: 100%;
   }
 }
@@ -629,6 +631,7 @@ header form {
   margin-left: auto;
 }
 header label {
+  position: relative;
   display: inline-block;
   cursor: pointer;
 }
@@ -638,6 +641,9 @@ header label {
   }
 }
 header label:before {
+  position: absolute;
+  top: 1px;
+  left: -32px;
   display: inline-block;
   width: 25px;
   height: 25px;
